Change the font size to fix task type text being cut off

--- a/css/task-type-list.css
+++ b/css/task-type-list.css
@@ -19,7 +19,7 @@ p.task-type-list-task-symbol {
     border: solid 0.08rem #222222;
     border-radius: 20%;
     float: left;
-    font-size: 0.8rem;
+    font-size: 0.75rem;
     line-height: 1.3rem;
     margin: 0.1rem;
     padding: 0.1rem;
